# pressure-field-experiment

./: .gitignore  Cargo.toml  Taskfile.yml  analysis.R  combine_pressure_field.R  run-experiments.sh
crates/latin-experiment/: Cargo.toml  Modelfile
crates/latin-experiment/src/: artifact.rs  conversation.rs  example_bank.rs  experiment.rs  generator.rs  lib.rs  llm_actor.rs  main.rs  results.rs  sensors.rs  tick_driver.rs  vllm_client.rs
crates/latin-experiment/tests/: claim_integration_test.rs
crates/schedule-experiment/: Cargo.toml
crates/schedule-experiment/src/: artifact.rs  conversation.rs  experiment.rs  generator.rs  lib.rs  llm_actor.rs  main.rs  results.rs  sensors.rs  vllm_client.rs
crates/survival-kernel/: Cargo.toml
crates/survival-kernel/src/: artifact.rs  config.rs  kernel.rs  lib.rs  messages.rs  pressure.rs  region.rs
crates/survival-kernel/src/actors/: claim_manager.rs  coordinator.rs  mod.rs  region_actor.rs  sensor_actor.rs
modelfiles/: Modelfile-0.5b  Modelfile-1.5b  Modelfile-14b  Modelfile-3b  Modelfile-7b
paper/: cover-letter.tex  information-sheet.md  main.tex  main.typ  preamble.tex  references.bib  rodriguez-pressure-field-coordination-2026.bbl  rodriguez-pressure-field-coordination-2026.tex  template.typ
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  problem-formulation.tex  related-work.tex  theoretical-analysis.tex
results/: analyze_ablation.R  analyze_coupling.R  analyze_grid.R  analyze_pressure_field.R  generate_figures.R
results.prior/20260114-212024/: metadata.json
results.prior/20260114-221958/: ablation-20260114-231948.json  difficulty-easy-20260115-012838.json  escalation-with-20260115-002328.json  escalation-without-20260114-224448.json  metadata.json  scaling-20260114-231013.json
runpod-template/: Dockerfile  run-experiments.sh  run.sh
visualizations/: round_robin_topology.R
