[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rodzilla/emergent-coordination"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["serde", "v4", "v5"] }

# Async runtime (for future use)
tokio = { version = "1", features = ["full"] }
