[package]
name = "latin-experiment"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "latin-experiment"
path = "src/main.rs"

[dependencies]
# Internal
survival-kernel = { path = "../survival-kernel" }

# Actor framework
acton-reactive = "7.1.0"

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# LLM integration
ollama-rs = { version = "0.3", features = ["default"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Utilities
uuid.workspace = true
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.31"
