[package]
name = "survival-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
acton-macro = "7.1.0"
acton-reactive = "7.1.0"
anyhow.workspace = true
dashmap = "6.1.0"
futures = "0.3.31"
mti = { version = "1.0.0", features = ["serde"] }
parking_lot = "0.12.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing = "0.1.44"
uuid.workspace = true
